src/objects/Search_Strategy__c.object
<CustomObject>
    <description>A literature search strategy is used in literature review for each substance group and constitutes of multiple keywords and components combined into a search string to retrieve scientific publications related to the product. This section is used to capture the versions of the search strategy document approved by the client, date approved, and when it is due for annual revision.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-4470</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Search Strategies</relationshipLabel>
        <relationshipName>Search_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>IQVIAPSA-4470</description>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Annual_Search_Strategy_Due__c</fullName>
        <description>IQVIAPSA-4470</description>
        <label>Date Annual Search Strategy Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Search_Strategy_got_Client_Approval__c</fullName>
        <description>IQVIAPSA-4470</description>
        <label>Date Search Strategy got Client Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LR_Project_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LR Project Overview</label>
        <referenceTo>LR_Project_Overview__c</referenceTo>
        <relationshipLabel>Search Strategies</relationshipLabel>
        <relationshipName>Search_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LR_Type__c</fullName>
        <label>LR Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EV MLM</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>IQVIAPSA-4470</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-4470</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Drug__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Drug__c</referenceTo>
        <relationshipLabel>Search Strategies</relationshipLabel>
        <relationshipName>Search_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>IQVIAPSA-4470</description>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-4470</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Search Strategies</relationshipLabel>
        <relationshipName>Search_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_of_Search_Strategy__c</fullName>
        <description>IQVIAPSA-4470</description>
        <label>Version #of Search Strategy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Search Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Version_of_Search_Strategy__c</columns>
        <columns>Date_Search_Strategy_got_Client_Approval__c</columns>
        <columns>Date_Annual_Search_Strategy_Due__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Search Strategy Name</label>
        <startingNumber>21750</startingNumber>
        <fullName>Name</fullName>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SS_01_SearchStrategygotClientApproval</fullName>
        <active>true</active>
        <description>IQVIAPSA-4652</description>
        <errorConditionFormula>AND(Date_Search_Strategy_got_Client_Approval__c &gt; TODAY(), $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == False)</errorConditionFormula>
        <errorMessage>&apos;Date Search Strategy got Client Approval&apos; cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SS_02_DateAnnualValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNULL( Date_Annual_Search_Strategy_Due__c ), $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Date_Annual_Search_Strategy_Due__c</errorDisplayField>
        <errorMessage>Date Annual Search Strategy Due&apos; field is a required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SS_04_Search_Strategy_Created</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR (ISPICKVAL(LR_Project_Overview__r.Search_Strategy_Created__c,&apos;No&apos;), ISPICKVAL(LR_Project_Overview__r.Search_Strategy_Created__c,&apos;Client Responsible&apos;), ISPICKVAL(LR_Project_Overview__r.Search_Strategy_Created__c,&apos;N/A&apos;)), ISNEW() ,$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = False)</errorConditionFormula>
        <errorMessage>When Search Strategy is set to “No, &apos;N/A&apos; or Client Responsible” in the Project overview section you cannot create a Search Strategy record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SS_05_CheckDataFromLR</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == False,
OR(
ISBLANK(Account__c),
ISBLANK(Product__c),
ISBLANK(Project__c),
ISPICKVAL(LR_Type__c, &apos;&apos;)
)
)</errorConditionFormula>
        <errorMessage>You cannot create a new search strategy record because Project, Account, Product and LR Type is blank on the LR project overview record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SS_06_Search_Strategy_Not_Created</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  
   OR(ISPICKVAL( LR_Project_Overview__r.Status__c , &apos;Completed&apos;),
      ISPICKVAL( LR_Project_Overview__r.Status__c , &apos;Cancelled&apos;)
     ),  $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = False)</errorConditionFormula>
        <errorMessage>You cannot create new search strategy records when status of LR Project overview is marked as Completed or Cancelled</errorMessage>
    </validationRules>
</CustomObject>